# VideoGen

./: CMakeLists.txt
Videos/: Videos.txt
lib/FFmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp
